@@ -1,3 +1,10 @@
+2006-12-26  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-ringschart.c:
+	* src/baobab-tree-map.c:
+
+	Small cleanups.
+
 2006-12-12  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baobab-ringschart.c (baobab_ringschart_motion_notify):
